src/tests/fixtures/extend_interface/addStringFieldToNonGrats.invalid.ts.expected
-----------------
INPUT
----------------- 
type SomeNonGratsType = string;

/** @gqlField */
export function greeting(someType: SomeNonGratsType): string {
  return `Hello ${someType}!`;
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/extend_interface/addStringFieldToNonGrats.invalid.ts:4:36 - error: Expected a reference to a declaration with a `@gql*` docblock. Grats needs to determine which GraphQL type is being referenced in this location. This requires being able to resolve type references to their `@gql` annotated declaration.

4 export function greeting(someType: SomeNonGratsType): string {
                                     ~~~~~~~~~~~~~~~~

  src/tests/fixtures/extend_interface/addStringFieldToNonGrats.invalid.ts:1:1
    1 type SomeNonGratsType = string;
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    Did you mean to add a `@gql*` docblock to this declaration?
